# sensor-dashboard

./: .cenv  backend.py  frontend.py  pyproject.toml
Potentio_Code/: Potentio_Code.ino
streamlit/: backend.py  frontend.py
