[tool.poetry]
name = "sensor-dashboard"
version = "0.1.0"
description = ""
authors = ["Aditya W <07311940000001@mahasiswa.integra.its.ac.id>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
streamlit = "^1.8.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
